[gd_scene load_steps=2 format=3 uid="uid://dxwaejsl8qimd"]

[ext_resource type="Script" path="res://scenes/components/physics/hurt_box.gd" id="1_xmmug"]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_xmmug")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
